[package]
name = "postgres-sys"
version = "0.1.0"
authors = ["Jeff Davis <jeff@j-davis.com>",
           "Jelte Fennema <github-tech@jeltef.nl>"]
edition = "2018"
license = "PostgreSQL OR MIT"
description = "PostgreSQL include files processed with bindgen."
repository = "https://github.com/jeff-davis/postgres-sys.rs"
documentation = "https://docs.rs/postgres-sys"

[dependencies]

[build-dependencies]
bindgen = "^0.53"
postgres-util = "^0.1"
